fix gitignore for enviroment and cocoapods

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ build/
 .gradle
 local.properties
 *.iml
-
+gradle.properties
 # node.js
 #
 node_modules/
@@ -360,6 +360,14 @@ Session.vim
 tags
 # Persistent undo
 [._]*.un~
+
+### CocoaPods ###
+## CocoaPods GitIgnore Template
+
+# CocoaPods - Only use to conserve bandwidth / Save time on Pushing
+#           - Also handy if you have a large number of dependant pods
+#           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGNORE THE LOCK FILE
+Pods/
 
 # End of https://www.gitignore.io/api/vim,git,linux,macos,reactnative
 
