--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />>
 
     <application
       android:name=".MainApplication"
@@ -10,11 +11,6 @@
       android:icon="@mipmap/ic_launcher"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
-
-         <!-- You will only need to add this meta-data tag, but make sure it's a child of application -->
-      <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="${googleApiKey}"/>
 
       <activity
         android:name=".MainActivity"
@@ -27,6 +23,11 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="${googleApiKey}"/>
+
     </application>
 
 </manifest>
