--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,6 +143,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-image-picker')
     implementation project(':react-native-maps')
     implementation project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
