--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-image-picker": "^0.28.0",
     "react-native-maps": "^0.23.0",
     "react-native-navigation": "^2.5.0",
     "react-native-vector-icons": "^6.1.0",
