--- a/.gitignore
+++ b/.gitignore
@@ -369,5 +369,8 @@ tags
 #           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGNORE THE LOCK FILE
 Pods/
 
+# firebase
+.firebaserc
+
 # End of https://www.gitignore.io/api/vim,git,linux,macos,reactnative
 
