add firebase, react-native-config, uuid-v4

--- a/.gitignore
+++ b/.gitignore
@@ -371,6 +371,6 @@ Pods/
 
 # firebase
 .firebaserc
-awesome-palces.json
+awesome-places.json
 # End of https://www.gitignore.io/api/vim,git,linux,macos,reactnative
 
