--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,10 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "cors": "^2.8.5",
+    "firebase-admin": "^7.0.0",
+    "firebase-functions": "^2.2.0",
+    "uuid-v4": "^0.1.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
