--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,6 +39,10 @@ target 'RnCourse' do
   pod 'Google-Maps-iOS-Utils' # Uncomment this line if you want to support GoogleMaps on iOS
   pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
 
+
+
+  pod 'react-native-config', :path => '../node_modules/react-native-config'
+
 end
 
 post_install do |installer|
