--- a/ios/RnCourse/Info.plist
+++ b/ios/RnCourse/Info.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>NSCameraUsageDescription</key>
-	<string>Let&apos;s take a photo!</string>
+	<string>Let's take a photo!</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>You want to share an image, right?</string>
 	<key>NSLocationUsageDescription</key>
-	<string>Let&apos;s share a place!</string>
+	<string>Let's share a place!</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -31,7 +31,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
