--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "postinstall": "./node_modules/react-native-maps/enable-google-maps 'module/GoogleMaps-2.7.0/**'"
   },
   "dependencies": {
+    "firebase": "^5.8.2",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-config": "^0.11.7",
     "react-native-image-picker": "^0.28.0",
     "react-native-maps": "^0.23.0",
     "react-native-navigation": "^2.5.0",
     "react-native-vector-icons": "^6.1.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid-v4": "^0.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
